crates/env-check-render/tests/snapshots/render__render_empty_data_object.snap
---
source: crates/env-check-render/tests/render.rs
expression: md
---
## env-check: PASS

- Findings: 0 error, 0 warn, 0 info

_No findings._
