crates/env-check-render/tests/snapshots/render__render_empty_findings_with_sources.snap
---
source: crates/env-check-render/tests/render.rs
expression: md
---
## env-check: PASS

- Findings: 0 error, 0 warn, 0 info
- Profile: `oss`
- Sources: `.tool-versions`, `.mise.toml`, `rust-toolchain.toml`

_No findings._
