crates/env-check-render/tests/snapshots/render__render_pass_no_findings.snap
---
source: crates/env-check-render/tests/render.rs
expression: md
---
## env-check: PASS

- Findings: 0 error, 0 warn, 0 info
- Profile: `oss`
- Sources: `.tool-versions`

_No findings._
